--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "test": "jest",
     "lint": "eslint .",
     "start": "react-native start",
+    "ios": "react-native run-ios",
+    "android": "react-native run-android",
     "dev": "react-native start --reset-cache",
-    "test": "jest"
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +34,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-devtools": "^4.28.5",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
