--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "@aculab-com/react-native-aculab-client": "^1.4.1-beta",
+    "@hookform/resolvers": "^3.3.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "^3.27.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
