--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@ui/*": ["./src/components/ui/*"],
       "@components/*": ["./src/components/*"]
     },
   },
