:wrench: Providers path alias added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@ui/*": ["./src/components/ui/*"],
+      "@providers/*": ["./src/providers/*"],
       "@components/*": ["./src/components/*"]
     },
   },
