--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,15 @@ apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 
 /**
+ * React Native Vector Icons
+ */
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf' ] // Specify font files
+]
+
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+
+/**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
@@ -106,6 +115,9 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+
+    // React Native Vector Icons
+    implementation project(':react-native-vector-icons')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
