--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-webrtc": "^106.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.17",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
