--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-webrtc": "^106.0.7",
     "zod": "^3.22.4"
